# GameOfLife

./: .gitignore  BlocksGrid.cpp  BlocksGrid.h  CMakeLists.txt  Life.cpp  Life.h  README.md  main.cpp
